edit index.html bug

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             </div>
             <div class="app-container col-md-6 col-sm-12">
               <img
-                src="/smartmockups_ktaamfst.e39ce3a4.jpg"
+                src="./smartmockups_ktaamfst.e39ce3a4.jpg"
                 alt="app photo"
                 class="app-photo"
               />
