--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
     ></script>
 
     <!-- css -->
+    <link rel="stylesheet" href="./dist/styles.dd35da22.css">
     <link rel="stylesheet" href="./dist/main.6277c4fd.css">
-    <link rel="stylesheet" href="./dist/styles.d5045610.css">
-    <!-- <link rel="stylesheet" href="./src/css/styles.css" />
-    <link rel="stylesheet" href="./src/css/main.css" /> -->
+ 
+    <!-- <link rel="stylesheet" href="./src/css/styles.css" /> -->
+    <!-- <link rel="stylesheet" href="./src/css/main.css" />  -->
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -655,7 +656,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./dist/controller.04435811.js"></script>
+    <script src="./dist/controller.296cf101.js"></script>
     <!-- <script  type="module" src="./src/js/controller.js"></script> -->
   </body>
 </html>
