add download-app view

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 vitae dolorem asperiores dignissimos natus laudantium odit
                 cupiditate assumenda minus? Natus non nobis culpa?
               </p>
-              <button class="btn btn-dark btn-lg">
+              <button class="btn btn-dark btn-lg download-app">
                 <i class="fab fa-android"></i> Download
               </button>
             </div>
@@ -656,7 +656,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./dist/controller.296cf101.js"></script>
+    <script src="./dist/controller.f51594b7.js"></script>
     <!-- <script  type="module" src="./src/js/controller.js"></script> -->
   </body>
 </html>
